--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,6 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"]
 }
+rules:{
+  'react/jsx-key': [1, { checkFragmentShorthand: true }]
+}
