--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "motion": "^11.12.0",
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
+    "motion": "^11.15.0",
+    "next": "^14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "split-type": "^0.3.4",
     "tailwind-merge": "^2.5.5"
   },
